add stubs, many changes
